# memory

./: .gitignore  BOOT_SEQUENCE_FLOW_DIAGRAM.txt  BOOT_SEQUENCE_STATUS.md  CLEANUP_COMPLETED.md  CMakeLists.txt  COMPLETE_IMPLEMENTATION_SUMMARY.txt  COMPLETE_SYSTEM_ARCHITECTURE.md  COMPREHENSIVE_ANTI_SPOOFING_TESTS.md  COMPREHENSIVE_TEST_RESULTS.md  DELETION_REVIEW.md  DEPLOYMENT_GUIDE.txt  EC2_SSH_CREDENTIALS.md  EYE_ANALYSIS_EXPLAINED.md  FINAL_ISSUES_ANALYSIS.md  IR_ONLY_MIGRATION_PLAN.md  MOBILE_APP_INTEGRATION_SPEC.txt  OLD_VS_NEW_COMPARISON.txt  PHASE1_FIXES.md  QR_ENCRYPTION_ANALYSIS.md  QUICK_REFERENCE.md  README.md  SCREEN_7_PLACEHOLDER_IMPLEMENTATION.md  SOLUTION.md  SYSTEM_STATUS.md  TODO_CHECKLIST.md  UNIFIED_ACCESS_SYSTEM.md  analyze_bag.cpp  build-and-run.sh  device_label_b4_2f_03_31_9a_35.txt  mdai.sh  production_ready_check.sh  quick-rebuild.sh  rebuild-and-restart.sh  run_liveness_viewer.sh  test_camera_view.py  test_device_key  test_device_key.cpp  test_face_landmarks_web.py  test_face_simple.py  test_nose_mediapipe.py  (+5 more)
.cursor/rules/: nodocsrule.mdc
antispoof/: main.py  renametoenv  requirements.txt  spoofservice.py
deployment/: NEW_DEVICE_SETUP.md  SERVICE_SETUP_PLAN.md  crash-handler.sh  deploy-complete-system.sh  deploy-rdk-with-registration.sh  deploy_to_device.sh  install.sh  install_dependencies.sh  install_service.sh  mdai-register.service  mdai-system.service  mdai-watchdog.service  optimize-system.sh  rdk_x5_os_optimization.md  register-device.sh  status.sh  tailscale-dns-monitor.service  tailscale-dns-monitor.sh  tailscale-watchdog.service  tailscale-watchdog.sh  watchdog.sh  wifi-always-on.service  wifi-always-on.sh
ec2-server/: .gitignore  MESSAGE_PROTOCOL.md  README.md  deploy.sh  mobile_session_portal.html  requirements.txt  server.py  user_portal.html
examples/: CMakeLists.txt  anti_spoofing_test_suite.cpp  ascii_visual_test.cpp  basic_capture.cpp  debug_anti_spoofing.cpp  frame_saver.cpp  human_face_detection_test.cpp  pipeline_example.cpp  simple_liveness_viewer.cpp  visual_face_detection_test.cpp
highres/: close and low res modi_Infrared.raw  close and low res modi_Infrared_metadata.csv  default close_Infrared.raw  default close_Infrared_metadata.csv  default_Infrared.raw  default_Infrared_metadata.csv  higfh res close_Infrared.raw  higfh res close_Infrared_metadata.csv  high res wide frame_Infrared.raw  high res wide frame_Infrared_metadata.csv  log light auto modi wide_Infrared.raw  log light auto modi wide_Infrared_metadata.csv  low exposure and high gain manual_Infrared.raw  low exposure and high gain manual_Infrared_metadata.csv  low light auto modi_Infrared.raw  low light auto modi_Infrared_metadata.csv  low light close frame_Infrared.raw  low light close frame_Infrared_metadata.csv  low light wide frame_Infrared.raw  low light wide frame_Infrared_metadata.csv  phone close normal_Infrared.raw  phone close normal_Infrared_metadata.csv  phone low light close_Infrared.raw  phone low light close_Infrared_metadata.csv  phone low light wide_Infrared.raw  phone low light wide_Infrared_metadata.csv  phone normal wide_Infrared.raw  phone normal wide_Infrared_metadata.csv  wide high res modi_Infrared.raw  wide high res modi_Infrared_metadata.csv
include/: AntiSpoofing.hpp  AsyncQueue.hpp  BPUFaceLandmark.hpp  CameraInitializer.hpp  CryptoUtils.hpp  FaceDetector.hpp  FrameBox.hpp  NetworkManager.hpp  Pipeline.hpp  Producer.hpp  RingBuffer.hpp  SerialCommunicator.hpp  StatsService.hpp  SystemController.hpp  TrustZoneIdentity.hpp  Utils.hpp  WS2812Controller.hpp  WorkerPool.hpp
include/mediapipe/: native_face_landmarker.h
lib/mediapipe/: face_mesh_bridge.py  libface_mesh_wrapper.so.1.0.0
mediapipe_rebuild/: CMakeLists.txt  README.md  build.sh  face_mesh_wrapper.cpp  face_mesh_wrapper.h  test_wrapper.cpp
models/: convert_face_landmarks.py  deploy.prototxt
python/: mdai_realsense.py
rdk-service/: ARCHITECTURE.md  PRODUCTION_DEPLOY.md  mdai-system.service  mdai-watchdog.service
scripts/: mdai-service.sh
src/: AntiSpoofing.cpp  AntiSpoofing.cpp.backup  AntiSpoofing.cpp.before_frame_history_fix  BPUFaceLandmark.cpp  CameraInitializer.cpp  CryptoUtils.cpp  FaceDetector.cpp  FrameBox.cpp  NativeFaceLandmarker.cpp  NetworkManager.cpp  Pipeline.cpp  Producer.cpp  RingBuffer.cpp  SerialCommunicator.cpp  SystemController.cpp  TrustZoneIdentity.cpp  Utils.cpp  WS2812Controller.cpp  main.cpp
tests/: CMakeLists.txt  ir_detection_results.txt  record_test_data.py  ring_buffer_test.cpp  test_buffer_memory.cpp  test_buffer_stress.cpp  test_camera_capture.cpp  test_camera_initialization.cpp  test_ir_face_detection.py  test_multiple_consumers.cpp  test_recording_modes.cpp  test_system_comprehensive.py  test_system_flow.cpp  test_unified_access.cpp  test_with_consumer.cpp
tests/test_data/: face_scan_landmarks.npy
tools/: TFLITE_REPLACEMENT_README.md  admin_portal.html  admin_portal_secure.html  debug_esp32_detection.sh  esp_serial.py  face_tracking_bpu_test.py  face_tracking_gui_test.py  face_tracking_gui_test_tflite.py  face_tracking_hybrid_test.py  generate_device_label.py  register_device.py  run_face_test.sh  test_face_landmark_tflite.py  test_landmark_correct.py  test_landmark_on_image.py  test_mediapipe_simple.py
tools/bpu_conversion/: convert_to_bpu.sh  face_landmark_config.yaml  generate_calibration_data.py  setup_and_convert.sh
